syntax = "proto3";
package minecpp.proto.event.serverbound.v1;

import "google/protobuf/any.proto";
import "minecpp/proto/common/v1/Common.proto";
import "minecpp/proto/common/v1/Vector.proto";
import "minecpp/proto/player/v1/Id.proto";

message Event {
  google.protobuf.Any payload = 1;
  player.v1.PlayerId player_id = 2;
}

message AcceptPlayer {
  string name = 1;
  uint32 challenge_id = 2;
  uint32 front_id = 3;
}

message SetPlayerPosition {
  common.v1.Vector3 position = 1;
  bool is_on_ground = 2;
}

message SetPlayerRotation {
  common.v1.Rotation rotation = 1;
  bool is_on_ground = 2;
}

message SetPlayerPositionRotation {
  common.v1.Vector3 position = 1;
  common.v1.Rotation rotation = 2;
  bool is_on_ground = 3;
}

message SetPlayerOnGround {
  bool is_on_ground = 1;
}

message ChatMessage {
  string message = 1;
}

message RemovePlayer {
}

message PlayerDigging {
  common.v1.PlayerDiggingState state = 1;
  common.v1.BlockPosition block_position = 2;
  common.v1.Face face = 3;
  int32 sequence_id = 4;
}

message UpdatePing {
  int32 ping = 1;
}

message AnimateHand {
  int32 hand = 1;
}

message PreInitialChunks {
}

message PostInitialChunks  {
}

message BlockPlacement {
  int32 hand = 1;
  common.v1.BlockPosition position = 2;
  common.v1.Face face = 3;
  common.v1.Vector3f crosshair = 4;
  bool inside_block = 5;
  int32 sequence_id = 6;
}

message UseItem {
  int32 hand = 1;
  int32 sequence_id = 2;
}

message ChangeInventoryItem {
  int32 slot_id = 1;
  common.v1.ItemId item_id = 2;
  int32 item_count = 3;
}

message DropInventoryItem {
  bool full_stack = 1;
}

message SetCarriedItem {
  common.v1.ItemId carried_item_id = 1;
  int32 carried_item_count  = 2;
}

message ChangeHeldItem {
  int32 slot = 1;
}

message IssueCommand  {
  string command = 1;
}

message Interact  {
  uint32 entity_id = 1;
  common.v1.InteractionType interaction_type = 2;
  common.v1.Vector3f position = 3;
  common.v1.HandType hand_type = 4;
  bool is_sneaking = 5;
}

message RequestRespawn {
};